# OpenXR-Tutorials

./: .clang-format  .cmake-format.py  .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  REUSE.toml  Schedule.md  build-android-arch.bat  build-android-arch.sh  build-common-archs.bat  build-common-archs.sh  build-eoc-archs.bat  build-eoc-archs.sh  build-site.sh  eoc-archs-rm-tags.py  requirements.txt
.github/workflows/: build-android-arch.yml  build-android.yml  build-common-archs.yml  build-eoc-archs.yml  build-host-linux.yml  build-host-windows.yml  build-site.yml  gradle-wrapper-validation.yml
.reuse/: dep5
Chapter1/: CMakeLists.txt  build.gradle  gradle.properties  main.cpp  settings.gradle
Chapter1/app/: build.gradle
Chapter2/: CMakeLists.txt  gradle.properties  main.cpp  settings.gradle
Chapter2.1/: CMakeLists.txt  main.cpp
Chapter2.1/app/: build.gradle
Chapter2.1/gradle/wrapper/: gradle-wrapper.properties
Chapter2.1_Android/app/: build.gradle
Chapter2.1_Android/app/src/main/cpp/: CMakeLists.txt  main.cpp
Chapter2.2/: CMakeLists.txt  GraphicsAPIs.cpp  GraphicsAPIs.h  main.cpp
Chapter2.2/app/: build.gradle
Chapter2.2/app/src/main/: AndroidManifest.xml
Chapter2.2/gradle/wrapper/: gradle-wrapper.properties
Chapter2/app/: build.gradle
Chapter2/app/src/main/: AndroidManifest.xml
Chapter2/app/src/main/res/values/: strings.xml
Chapter3/: CMakeLists.txt  gradle.properties  main.cpp  settings.gradle
Chapter3/app/: build.gradle
Chapter3/app/src/main/: AndroidManifest.xml
Chapter3/app/src/main/res/values/: strings.xml
Chapter4/: CMakeLists.txt  main.cpp  settings.gradle
Chapter4/app/: build.gradle
Chapter4/app/src/main/: AndroidManifest.xml
Chapter4/app/src/main/res/values/: strings.xml
Chapter4/gradle/wrapper/: gradle-wrapper.properties
Chapter5/: CMakeLists.txt  build.gradle  main.cpp  settings.gradle
Chapter5/app/: build.gradle
Chapter5/app/src/main/: AndroidManifest.xml
Chapter5/app/src/main/assets/shaders/: PixelShader_GLES.glsl  VertexShader_GLES.glsl
Chapter5/app/src/main/res/values/: strings.xml
Chapter6_1_Multiview/: CMakeLists.txt  build-common-archs.bat  build-common-archs.sh
Chapter6_1_Multiview/Chapter6/: CMakeLists.txt  build.gradle  main.cpp  settings.gradle
Chapter6_1_Multiview/Chapter6/app/: build.gradle
Chapter6_1_Multiview/Chapter6/app/src/main/: AndroidManifest.xml
Chapter6_1_Multiview/Chapter6/app/src/main/res/values/: strings.xml
Chapter6_1_Multiview/Common/: DebugOutput.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPI_D3D11.cpp  GraphicsAPI_D3D11.h  GraphicsAPI_D3D12.cpp  GraphicsAPI_D3D12.h  GraphicsAPI_OpenGL.cpp  GraphicsAPI_OpenGL.h  GraphicsAPI_OpenGL_ES.cpp  GraphicsAPI_OpenGL_ES.h  GraphicsAPI_Vulkan.cpp  GraphicsAPI_Vulkan.h  HelperFunctions.h  OpenXRDebugUtils.cpp  OpenXRHelper.h  d3dx12.h
Chapter6_1_Multiview/ShadersMultiview/: PixelShader_DX11_MV.hlsl  PixelShader_GLES_MV.glsl  VertexShader_DX11_MV.hlsl  VertexShader_DX12_MV.hlsl  VertexShader_GLES_MV.glsl  VertexShader_GL_MV.glsl  VertexShader_VK_MV.glsl
Chapter6_1_Multiview/cmake/: FindEGL.cmake  FindOpenGLES.cmake  dxc_shader.cmake  fxc_shader.cmake  gfxwrapper.cmake  glsl_shader.cmake  graphics_api_select.cmake
Common/: DebugOutput.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPI_D3D11.cpp  GraphicsAPI_D3D11.h  GraphicsAPI_D3D12.cpp  GraphicsAPI_D3D12.h  GraphicsAPI_OpenGL.cpp  GraphicsAPI_OpenGL.h  GraphicsAPI_OpenGL_ES.cpp  GraphicsAPI_OpenGL_ES.h  GraphicsAPI_Vulkan.cpp  GraphicsAPI_Vulkan.h  GraphicsAPIs.cpp  GraphicsAPIs.h  HelperFunctions.h  LogMacros.h  OpenXRDebugUtils.cpp  OpenXRDebugUtils.h  OpenXRHelper.h  xr_linear_algebra.h
GraphicsAPI_Test/: CMakeLists.txt  main.cpp
Shaders/: PixelShader.glsl  PixelShader.hlsl  PixelShader_GLES.glsl  VertexShader.glsl  VertexShader.hlsl  VertexShader_GLES.glsl
cmake/: AndroidNdkModules.cmake  fxc_shader.cmake  gfxwrapper.cmake  glsl_shader.cmake  graphics_api_select.cmake  presentation.cmake
reuse/: CMakeLists.txt
tutorial/: .htaccess  1-introduction.rst  2-setup.rst  3-graphics.rst  4-actions.rst  5-extensions.rst  6-next-steps.rst  CMakeLists.txt  Outlines.md  conf.py  extensions.rst  index.rst  introduction.rst  platforms.html  robots.txt  setup.rst  sitemap.xml  tutorialmap.txt
tutorial/images/: OpenXRBeforeAfter.psd
tutorial/tutorial_sphinx_theme_1/: breadcrumbs.html  footer.html  layout.html  platforms.html  searchbox.html  theme.conf
tutorial/tutorial_sphinx_theme_1/locale/da/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/de/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/es/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/et/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/fa_IR/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/fr/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/hr/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/hu/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/it/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/lt/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/nl/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/pl/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/pt/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/pt_BR/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/ru/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/sv/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/tr/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/zh_CN/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/locale/zh_TW/LC_MESSAGES/: sphinx.po
tutorial/tutorial_sphinx_theme_1/static/css/: theme.css
tutorial/tutorial_sphinx_theme_1/static/css/icons/Android/: Attribution.txt
tutorial/tutorial_sphinx_theme_1/static/css/icons/Tux/: Attribution.txt
tutorial/tutorial_sphinx_theme_1/static/js/: updateGraphicsAPI.js  updatePlatform.js
(+4 files in other folders)
