file(GLOB SOURCES "main.cpp" )
add_executable(Chapter_2 ${SOURCES})
target_include_directories( Chapter_2 PUBLIC ${OPENXR_DIR}/include )
target_link_directories( Chapter_2 PUBLIC ${OPENXR_DIR}/build/src/loader/Debug ${OPENXR_DIR}/build/src/loader/Release )
target_link_libraries( Chapter_2 openxr_loader$<$<CONFIG:Debug>:d> )
